Added files via Greta

--- a/welcome.html
+++ b/welcome.html
@@ -15,7 +15,6 @@
       </div>
       <p class="tagline">Smart Tab Management for Power Users</p>
     </header>
-
     <main class="welcome-content">
       <section class="features">
         <h2>Powerful Features</h2>
@@ -52,7 +51,6 @@
           </div>
         </div>
       </section>
-
       <section class="getting-started">
         <h2>Getting Started</h2>
         <div class="steps">
@@ -86,7 +84,6 @@
           </div>
         </div>
       </section>
-
       <section class="shortcuts">
         <h2>Keyboard Shortcuts</h2>
         <div class="shortcuts-grid">
@@ -109,13 +106,11 @@
         </div>
       </section>
     </main>
-
     <footer class="welcome-footer">
       <button id="getStarted" class="cta-button">Get Started</button>
       <button id="skipWelcome" class="skip-button">Skip Welcome</button>
     </footer>
   </div>
-
-  <script src="welcome.js"></script>
+  <script src="welcome.js" type="module"></script>
 </body>
 </html>
