--- a/newtab.html
+++ b/newtab.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="newtab.js"></script>
+  <script src="newtab.js" type="module"></script>
 </body>
 </html>
